src/main/java/preprocessor/PreprocessorParser.java
// Generated from /home/john/IdeaProjects/Souffle_Ide_Plugin/grammar/Preprocessor.g4 by ANTLR 4.10.1
package preprocessor;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PreprocessorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NEW_LINE=1, WS=2, INCLUDE=3, DEFINE=4, IF_PRE=5, ELSE=6, IFNDEF=7, IFDEF=8, 
		ENDIF=9, PREPROCESSOR_PRAGMA=10, HASH=11, MACRO_BODY=12, LPAREN=13, RPAREN=14, 
		BACKSLASH=15, IDENT=16, VARARGS=17, DECL=18, FUNCTOR=19, INPUT_DECL=20, 
		OUTPUT_DECL=21, PRINTSIZE_DECL=22, LIMITSIZE_DECL=23, TYPE=24, COMPONENT=25, 
		INSTANTIATE=26, NUMBER_TYPE=27, SYMBOL_TYPE=28, OVERRIDE=29, PRAGMA=30, 
		PLAN=31, PIPE=32, LBRACKET=33, RBRACKET=34, DOLLAR=35, PLUS=36, MINUS=37, 
		COMMA=38, COLON=39, SEMICOLON=40, SUBTYPE=41, LE=42, GE=43, NE=44, EQUALS=45, 
		EXCLAMATION=46, STAR=47, AT=48, SLASH=49, CARET=50, PERCENT=51, LBRACE=52, 
		RBRACE=53, LT=54, GT=55, IF=56, DOT=57, NUMBER=58, FLOAT=59, UNSIGNED=60, 
		AUTOINC=61, BW_AND=62, BW_OR=63, BW_XOR=64, BW_NOT=65, BW_SHIFT_L=66, 
		BW_SHIFT_R=67, BW_SHIFT_R_UNSIGNED=68, L_AND=69, L_OR=70, L_XOR=71, L_NOT=72, 
		OUTPUT_QUALIFIER=73, INPUT_QUALIFIER=74, OVERRIDABLE_QUALIFIER=75, PRINTSIZE_QUALIFIER=76, 
		EQREL_QUALIFIER=77, INLINE_QUALIFIER=78, NO_INLINE_QUALIFIER=79, MAGIC_QUALIFIER=80, 
		NO_MAGIC_QUALIFIER=81, BRIE_QUALIFIER=82, BTREE_DELETE_QUALIFIER=83, BTREE_QUALIFIER=84, 
		UNDERSCORE=85, TRUELIT=86, FALSELIT=87, TOFLOAT=88, TONUMBER=89, TOSTRING=90, 
		TOUNSIGNED=91, CHOICEDOMAIN=92, STRING=93, COMMENT=94, LINE_COMMENT=95, 
		ANY_TEXT=96;
	public static final int
		RULE_program = 0, RULE_program_text = 1, RULE_non_empty_directive_list = 2, 
		RULE_pragma_directive = 3, RULE_ifdef_directive = 4, RULE_else_directive = 5, 
		RULE_include_directive = 6, RULE_define_directive = 7, RULE_macro_def = 8, 
		RULE_macro_body = 9, RULE_macro_args = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "program_text", "non_empty_directive_list", "pragma_directive", 
			"ifdef_directive", "else_directive", "include_directive", "define_directive", 
			"macro_def", "macro_body", "macro_args"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'#include'", "'#define'", "'#if'", "'#else'", "'#ifndef'", 
			"'#ifdef'", "'#endif'", "'#pragma'", "'#'", null, "'('", "')'", "'\\'", 
			null, "'...'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'|'", "'['", "']'", "'$'", "'+'", "'-'", 
			"','", "':'", "';'", "'<:'", "'<='", "'>='", "'!='", "'='", "'!'", "'*'", 
			"'@'", "'/'", "'^'", "'%'", "'{'", "'}'", "'<'", "'>'", "':-'", "'.'", 
			null, null, null, "'autoinc'", "'band'", "'bor'", "'bxor'", "'bnot'", 
			"'bshl'", "'bshr'", "'bshru'", "'land'", "'lor'", "'lxor'", "'lnot'", 
			"'output'", "'input'", "'overridable'", "'printsize'", "'eqrel'", "'inline'", 
			"'no_inline'", "'magic'", "'no_magic'", "'brie'", "'btree_delete'", "'btree'", 
			"'_'", "'true'", "'false'", "'to_float'", "'to_number'", "'to_string'", 
			"'to_unsigned'", "'choice-domain'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NEW_LINE", "WS", "INCLUDE", "DEFINE", "IF_PRE", "ELSE", "IFNDEF", 
			"IFDEF", "ENDIF", "PREPROCESSOR_PRAGMA", "HASH", "MACRO_BODY", "LPAREN", 
			"RPAREN", "BACKSLASH", "IDENT", "VARARGS", "DECL", "FUNCTOR", "INPUT_DECL", 
			"OUTPUT_DECL", "PRINTSIZE_DECL", "LIMITSIZE_DECL", "TYPE", "COMPONENT", 
			"INSTANTIATE", "NUMBER_TYPE", "SYMBOL_TYPE", "OVERRIDE", "PRAGMA", "PLAN", 
			"PIPE", "LBRACKET", "RBRACKET", "DOLLAR", "PLUS", "MINUS", "COMMA", "COLON", 
			"SEMICOLON", "SUBTYPE", "LE", "GE", "NE", "EQUALS", "EXCLAMATION", "STAR", 
			"AT", "SLASH", "CARET", "PERCENT", "LBRACE", "RBRACE", "LT", "GT", "IF", 
			"DOT", "NUMBER", "FLOAT", "UNSIGNED", "AUTOINC", "BW_AND", "BW_OR", "BW_XOR", 
			"BW_NOT", "BW_SHIFT_L", "BW_SHIFT_R", "BW_SHIFT_R_UNSIGNED", "L_AND", 
			"L_OR", "L_XOR", "L_NOT", "OUTPUT_QUALIFIER", "INPUT_QUALIFIER", "OVERRIDABLE_QUALIFIER", 
			"PRINTSIZE_QUALIFIER", "EQREL_QUALIFIER", "INLINE_QUALIFIER", "NO_INLINE_QUALIFIER", 
			"MAGIC_QUALIFIER", "NO_MAGIC_QUALIFIER", "BRIE_QUALIFIER", "BTREE_DELETE_QUALIFIER", 
			"BTREE_QUALIFIER", "UNDERSCORE", "TRUELIT", "FALSELIT", "TOFLOAT", "TONUMBER", 
			"TOSTRING", "TOUNSIGNED", "CHOICEDOMAIN", "STRING", "COMMENT", "LINE_COMMENT", 
			"ANY_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Preprocessor.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PreprocessorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program_textContext program_text() {
			return getRuleContext(Program_textContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PreprocessorVisitor ) return ((PreprocessorVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			program_text();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_textContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(PreprocessorParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(PreprocessorParser.IDENT, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(PreprocessorParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(PreprocessorParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(PreprocessorParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(PreprocessorParser.RPAREN, i);
		}
		public List<TerminalNode> STRING() { return getTokens(PreprocessorParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(PreprocessorParser.STRING, i);
		}
		public List<TerminalNode> COLON() { return getTokens(PreprocessorParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(PreprocessorParser.COLON, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(PreprocessorParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PreprocessorParser.SEMICOLON, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PreprocessorParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PreprocessorParser.COMMA, i);
		}
		public List<TerminalNode> DOT() { return getTokens(PreprocessorParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(PreprocessorParser.DOT, i);
		}
		public List<TerminalNode> UNDERSCORE() { return getTokens(PreprocessorParser.UNDERSCORE); }
		public TerminalNode UNDERSCORE(int i) {
			return getToken(PreprocessorParser.UNDERSCORE, i);
		}
		public List<TerminalNode> LBRACE() { return getTokens(PreprocessorParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(PreprocessorParser.LBRACE, i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(PreprocessorParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(PreprocessorParser.RBRACE, i);
		}
		public List<TerminalNode> LE() { return getTokens(PreprocessorParser.LE); }
		public TerminalNode LE(int i) {
			return getToken(PreprocessorParser.LE, i);
		}
		public List<TerminalNode> GE() { return getTokens(PreprocessorParser.GE); }
		public TerminalNode GE(int i) {
			return getToken(PreprocessorParser.GE, i);
		}
		public List<TerminalNode> TRUELIT() { return getTokens(PreprocessorParser.TRUELIT); }
		public TerminalNode TRUELIT(int i) {
			return getToken(PreprocessorParser.TRUELIT, i);
		}
		public List<TerminalNode> FALSELIT() { return getTokens(PreprocessorParser.FALSELIT); }
		public TerminalNode FALSELIT(int i) {
			return getToken(PreprocessorParser.FALSELIT, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(PreprocessorParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(PreprocessorParser.NUMBER, i);
		}
		public List<TerminalNode> UNSIGNED() { return getTokens(PreprocessorParser.UNSIGNED); }
		public TerminalNode UNSIGNED(int i) {
			return getToken(PreprocessorParser.UNSIGNED, i);
		}
		public List<TerminalNode> FLOAT() { return getTokens(PreprocessorParser.FLOAT); }
		public TerminalNode FLOAT(int i) {
			return getToken(PreprocessorParser.FLOAT, i);
		}
		public List<TerminalNode> LT() { return getTokens(PreprocessorParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(PreprocessorParser.LT, i);
		}
		public List<TerminalNode> GT() { return getTokens(PreprocessorParser.GT); }
		public TerminalNode GT(int i) {
			return getToken(PreprocessorParser.GT, i);
		}
		public List<TerminalNode> EQUALS() { return getTokens(PreprocessorParser.EQUALS); }
		public TerminalNode EQUALS(int i) {
			return getToken(PreprocessorParser.EQUALS, i);
		}
		public List<TerminalNode> PLUS() { return getTokens(PreprocessorParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(PreprocessorParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(PreprocessorParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(PreprocessorParser.MINUS, i);
		}
		public List<TerminalNode> AT() { return getTokens(PreprocessorParser.AT); }
		public TerminalNode AT(int i) {
			return getToken(PreprocessorParser.AT, i);
		}
		public List<TerminalNode> DOLLAR() { return getTokens(PreprocessorParser.DOLLAR); }
		public TerminalNode DOLLAR(int i) {
			return getToken(PreprocessorParser.DOLLAR, i);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(PreprocessorParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(PreprocessorParser.RBRACKET, i);
		}
		public List<TerminalNode> LBRACKET() { return getTokens(PreprocessorParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(PreprocessorParser.LBRACKET, i);
		}
		public List<TerminalNode> STAR() { return getTokens(PreprocessorParser.STAR); }
		public TerminalNode STAR(int i) {
			return getToken(PreprocessorParser.STAR, i);
		}
		public List<TerminalNode> EXCLAMATION() { return getTokens(PreprocessorParser.EXCLAMATION); }
		public TerminalNode EXCLAMATION(int i) {
			return getToken(PreprocessorParser.EXCLAMATION, i);
		}
		public List<TerminalNode> PERCENT() { return getTokens(PreprocessorParser.PERCENT); }
		public TerminalNode PERCENT(int i) {
			return getToken(PreprocessorParser.PERCENT, i);
		}
		public List<TerminalNode> SLASH() { return getTokens(PreprocessorParser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(PreprocessorParser.SLASH, i);
		}
		public List<TerminalNode> CARET() { return getTokens(PreprocessorParser.CARET); }
		public TerminalNode CARET(int i) {
			return getToken(PreprocessorParser.CARET, i);
		}
		public List<TerminalNode> NEW_LINE() { return getTokens(PreprocessorParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(PreprocessorParser.NEW_LINE, i);
		}
		public List<Non_empty_directive_listContext> non_empty_directive_list() {
			return getRuleContexts(Non_empty_directive_listContext.class);
		}
		public Non_empty_directive_listContext non_empty_directive_list(int i) {
			return getRuleContext(Non_empty_directive_listContext.class,i);
		}
		public Program_textContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_text; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PreprocessorVisitor ) return ((PreprocessorVisitor<? extends T>)visitor).visitProgram_text(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Program_textContext program_text() throws RecognitionException {
		Program_textContext _localctx = new Program_textContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_text);
		int _la;
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case ELSE:
			case ENDIF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case NEW_LINE:
			case INCLUDE:
			case DEFINE:
			case IF_PRE:
			case IFNDEF:
			case IFDEF:
			case PREPROCESSOR_PRAGMA:
			case LPAREN:
			case RPAREN:
			case IDENT:
			case LBRACKET:
			case RBRACKET:
			case DOLLAR:
			case PLUS:
			case MINUS:
			case COMMA:
			case COLON:
			case SEMICOLON:
			case LE:
			case GE:
			case EQUALS:
			case EXCLAMATION:
			case STAR:
			case AT:
			case SLASH:
			case CARET:
			case PERCENT:
			case LBRACE:
			case RBRACE:
			case LT:
			case GT:
			case DOT:
			case NUMBER:
			case FLOAT:
			case UNSIGNED:
			case UNDERSCORE:
			case TRUELIT:
			case FALSELIT:
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					setState(59);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case IDENT:
						{
						setState(25);
						match(IDENT);
						}
						break;
					case LPAREN:
						{
						setState(26);
						match(LPAREN);
						}
						break;
					case RPAREN:
						{
						setState(27);
						match(RPAREN);
						}
						break;
					case STRING:
						{
						setState(28);
						match(STRING);
						}
						break;
					case COLON:
						{
						setState(29);
						match(COLON);
						}
						break;
					case SEMICOLON:
						{
						setState(30);
						match(SEMICOLON);
						}
						break;
					case COMMA:
						{
						setState(31);
						match(COMMA);
						}
						break;
					case DOT:
						{
						setState(32);
						match(DOT);
						}
						break;
					case UNDERSCORE:
						{
						setState(33);
						match(UNDERSCORE);
						}
						break;
					case LBRACE:
						{
						setState(34);
						match(LBRACE);
						}
						break;
					case RBRACE:
						{
						setState(35);
						match(RBRACE);
						}
						break;
					case LE:
						{
						setState(36);
						match(LE);
						}
						break;
					case GE:
						{
						setState(37);
						match(GE);
						}
						break;
					case TRUELIT:
						{
						setState(38);
						match(TRUELIT);
						}
						break;
					case FALSELIT:
						{
						setState(39);
						match(FALSELIT);
						}
						break;
					case NUMBER:
						{
						setState(40);
						match(NUMBER);
						}
						break;
					case UNSIGNED:
						{
						setState(41);
						match(UNSIGNED);
						}
						break;
					case FLOAT:
						{
						setState(42);
						match(FLOAT);
						}
						break;
					case LT:
						{
						setState(43);
						match(LT);
						}
						break;
					case GT:
						{
						setState(44);
						match(GT);
						}
						break;
					case EQUALS:
						{
						setState(45);
						match(EQUALS);
						}
						break;
					case PLUS:
						{
						setState(46);
						match(PLUS);
						}
						break;
					case MINUS:
						{
						setState(47);
						match(MINUS);
						}
						break;
					case AT:
						{
						setState(48);
						match(AT);
						}
						break;
					case DOLLAR:
						{
						setState(49);
						match(DOLLAR);
						}
						break;
					case RBRACKET:
						{
						setState(50);
						match(RBRACKET);
						}
						break;
					case LBRACKET:
						{
						setState(51);
						match(LBRACKET);
						}
						break;
					case STAR:
						{
						setState(52);
						match(STAR);
						}
						break;
					case EXCLAMATION:
						{
						setState(53);
						match(EXCLAMATION);
						}
						break;
					case PERCENT:
						{
						setState(54);
						match(PERCENT);
						}
						break;
					case SLASH:
						{
						setState(55);
						match(SLASH);
						}
						break;
					case CARET:
						{
						setState(56);
						match(CARET);
						}
						break;
					case NEW_LINE:
						{
						setState(57);
						match(NEW_LINE);
						}
						break;
					case INCLUDE:
					case DEFINE:
					case IF_PRE:
					case IFNDEF:
					case IFDEF:
					case PREPROCESSOR_PRAGMA:
						{
						setState(58);
						non_empty_directive_list();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(61); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEW_LINE) | (1L << INCLUDE) | (1L << DEFINE) | (1L << IF_PRE) | (1L << IFNDEF) | (1L << IFDEF) | (1L << PREPROCESSOR_PRAGMA) | (1L << LPAREN) | (1L << RPAREN) | (1L << IDENT) | (1L << LBRACKET) | (1L << RBRACKET) | (1L << DOLLAR) | (1L << PLUS) | (1L << MINUS) | (1L << COMMA) | (1L << COLON) | (1L << SEMICOLON) | (1L << LE) | (1L << GE) | (1L << EQUALS) | (1L << EXCLAMATION) | (1L << STAR) | (1L << AT) | (1L << SLASH) | (1L << CARET) | (1L << PERCENT) | (1L << LBRACE) | (1L << RBRACE) | (1L << LT) | (1L << GT) | (1L << DOT) | (1L << NUMBER) | (1L << FLOAT) | (1L << UNSIGNED))) != 0) || ((((_la - 85)) & ~0x3f) == 0 && ((1L << (_la - 85)) & ((1L << (UNDERSCORE - 85)) | (1L << (TRUELIT - 85)) | (1L << (FALSELIT - 85)) | (1L << (STRING - 85)))) != 0) );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Non_empty_directive_listContext extends ParserRuleContext {
		public List<Define_directiveContext> define_directive() {
			return getRuleContexts(Define_directiveContext.class);
		}
		public Define_directiveContext define_directive(int i) {
			return getRuleContext(Define_directiveContext.class,i);
		}
		public List<Include_directiveContext> include_directive() {
			return getRuleContexts(Include_directiveContext.class);
		}
		public Include_directiveContext include_directive(int i) {
			return getRuleContext(Include_directiveContext.class,i);
		}
		public List<Ifdef_directiveContext> ifdef_directive() {
			return getRuleContexts(Ifdef_directiveContext.class);
		}
		public Ifdef_directiveContext ifdef_directive(int i) {
			return getRuleContext(Ifdef_directiveContext.class,i);
		}
		public List<Pragma_directiveContext> pragma_directive() {
			return getRuleContexts(Pragma_directiveContext.class);
		}
		public Pragma_directiveContext pragma_directive(int i) {
			return getRuleContext(Pragma_directiveContext.class,i);
		}
		public Non_empty_directive_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_non_empty_directive_list; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PreprocessorVisitor ) return ((PreprocessorVisitor<? extends T>)visitor).visitNon_empty_directive_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Non_empty_directive_listContext non_empty_directive_list() throws RecognitionException {
		Non_empty_directive_listContext _localctx = new Non_empty_directive_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_non_empty_directive_list);
		try {
			int _alt;
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEFINE:
				enterOuterAlt(_localctx, 1);
				{
				setState(66); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(65);
						define_directive();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(68); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case INCLUDE:
				enterOuterAlt(_localctx, 2);
				{
				setState(71); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(70);
						include_directive();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(73); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case IF_PRE:
			case IFNDEF:
			case IFDEF:
				enterOuterAlt(_localctx, 3);
				{
				setState(76); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(75);
						ifdef_directive();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(78); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case PREPROCESSOR_PRAGMA:
				enterOuterAlt(_localctx, 4);
				{
				setState(81); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(80);
						pragma_directive();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(83); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
